# panel-data-eto

./: .env.example  .gitignore  Help.md  README.md  main.py  pyproject.toml
src/Python/: ChatGPT.ipynb  _01_Data_Cleansing.ipynb  _02_Calculate_ETo.ipynb  _03_Calculate_PD.ipynb  _04_PDML.ipynb  notebook.ipynb
src/R/: PD.R  _00_case_study_map.R  _01_climate_classification.R  _02_calculate_et0.R  _03_panel_data_tests.R  _04_visualize_correlation_matrix.R  _05_panel_data_models.R  _model_et.R  hhh.R
