[project]
name = "panel-data-eto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "climate-indices>=2.2.0",
    "earthengine-api>=1.6.6",
    "fastparquet>=2024.11.0",
    "geopandas>=1.1.1",
    "ipython>=9.5.0",
    "jupyterlab>=4.4.7",
    "lightgbm>=4.6.0",
    "linearmodels>=6.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "netcdf4>=1.7.2",
    "notebook>=7.4.5",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "pyet>=1.4.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.2",
    "shapely>=2.1.1",
    "spei>=0.8.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "xarray>=2025.9.0",
    "xee>=0.0.20",
    "xgboost>=3.0.5",
]
